<?xml version="1.0"?>
<package format="3">
  <name>mavros_wrapper</name>
  <version>0.0.0</version>
  <description>The mavros_wrapper package</description>

  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>

</package>
