<?xml version="1.0"?>
<package format="3">
  <name>mavros_wrapper</name>
  <version>0.0.0</version>
  <description>The mavros_wrapper package</description>

  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>


  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_export_depend>rclpy</build_export_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>mavros</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <exec_depend>mavros</exec_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <exec_depend>mavros_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
